--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: ./
       dockerfile: dockerfile
     ports:
-      - "3000"
+      - ${PORT}:3000
     environment:
       - NODE_ENV=production
     restart:  always
