--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,18 @@
 services:
+  proxy:
+    container_name: website_proxy
+    image: nginx:alpine
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./public:/public
+    restart: always
+    networks:
+      - backend
+
   frontend:
     container_name: website
     build:
@@ -9,4 +23,14 @@ services:
     environment:
       - NODE_ENV=production
     restart:  always
+    networks:
+      - backend
 
+
+networks:
+  backend:
+    driver: bridge
+
+volumes:
+  data:
+    driver: local
